refactor: add testing method in ZeebeRocksDbFactory, to facilitate testing.